# pytest-gradescope

./: PKG-INFO  README.md  pyproject.toml
pytest_gradescope/: dialog.py  pytest_plugin.py
