[tool.poetry]
name = "pytest_gradescope"
version = "0.7.13"
description = "A few utilities for pytest to help with integration into gradescope"
authors = ["Aditya Saligrama <aditya@saligrama.io>"]
license = "MIT"
classifiers = [
    "Framework :: Pytest"
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.0"

[tool.poetry.plugins.pytest11]
pytest_gradescope = "pytest_gradescope.pytest_plugin"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
